--- a/tex/interaction.tex
+++ b/tex/interaction.tex
@@ -88,80 +88,284 @@
 % A: 烦请在模板的\href{https://github.com/sjtug/SJTUThesis}{github主页}点击“Star”，我想粗略统计一下使用学位论文模板的人数，谢谢大家。非常欢迎大家向项目贡献代码。
 
 
-\chapter{基于映射的xx2SQL生成}
+\chapter{基于映射的NLI2SQL生成}
 \label{chap:interaction}
 \section{研究问题}
+
+一直以来，自然语言接口是人机交互领域的终极追求，也是人机交互、机器学习领域专家孜孜不倦钻研学习的热门问题。
+对于本文所指出的业务层面与技术层面之间的矛盾，如果能对最终用户提供一个自然语言接口，使得我们的系统能直接从最终用户的自然语言中理解到用户的查询意图，并结合数据库，直接生成符合查询意图的SQL语句返回给用户，那么这一矛盾就可以非常自然和优美地得到解决。
+因此，本章将对从自然语言生成SQL语句的技术和模型进行探究，尝试寻找一种解决方案，能提供自然语言接口给非技术用户，让用户通过以自然语言表达的查询意图，得到目标SQL语句。
+
+自然语言理解存在许多难题，如歧义、语序，或者存在复杂的依赖结构等等，要完全基于自然语言理解来进行SQL生成是很困难的，效果可能会不尽如人意。
+所以，受到人机交互思想的启发，本文将使用自然语言理解与人机交互相结合的方式，来进行从自然语言到目标SQL语句的转化。
+对于自然语言意图，先对自然语言进行初步解析和理解，并在其中插入人机交互机制，让用户来引导生成的过程，指导自然语言理解，纠正机器理解过程中出现的错误、歧义、含糊不清的问题，从而提升整体的准确性。
+
+
 \section{相关技术}
+\subsection{相关技术1}
+\subsection{相关技术2}
 \section{解决方案}
-\section{实验与分析}
-\section{本章小结}
+\begin{figure}[!htp]
+    \centering
+    \includegraphics[width=15cm]{example/NLIapproach.pdf}
+    \bicaption[这里将出现在插图索引中]
+      {基于映射的NLI2SQL生成的总体方案}
+      {English caption}
+    \label{fig:NLIapproach}
+  \end{figure}
+图\ref{fig:NLIapproach}是本文从自然语言生成SQL语句模型的总体方案，它包含依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译、交互式对话器、用户接口六个模块：
+\begin{enumerate}
+    \item 用户接口：用户与系统进行交互的接口，包括输入自然语言、返回SQL语句、解析过程中的交互等等。
+    \item 交互式对话器：管理解析过程与用户的交互，在适当的时候与用户进行交互，让用户对解析过程进行指导。
+    \item 依赖解析树生成：将用户输入的，以自然语言表示的查询意图，应用自然语言理解技术，转化为依赖解析树，即将词语进行词性标注，以及识别出词语之间的关系，并将其组织成一个树状结构。详见\ref{nli:yljxssc}节。
+    \item 解析树节点映射：根据解析树节点对应的词语和数据库元数据、数据、SQL语法等信息，将解析树节点映射为SQL语法组件。
+在这个过程中，如果节点的映射有多个候选答案，交互式对话器会发起与用户的交互，将多个候选映射展示给用户，让用户来进行选择。详见\ref{nli:jxsjdys}节。
+    \item 解析树优化重构：节点映射完毕后，解析树节点经过系统匹配和用户指导后，得到了比较准确的结果，但解析树的结构仍是最初由依赖解析树生成得到的结构，这一原始结构的准确度并不高，受限于自然语言的复杂性和省略性，可能会有错误关系、缺失关系、缺失节点等等。
+为了使解析树能得到比较准确的结构，将设计算法和规则，修正错误关系，补全缺失节点和缺失关系，得到较为准确的解析树，称为查询树。详见\ref{nli:jxsyhcg}节。
+    \item 查询树翻译：解析树的结构已经符合SQL语法，节点映射结果也对应于真实的SQL语法、数据库schema或数据，可以很自然地将树状结构的翻译为SQL语句，最后将SQL语句通过用户接口返回给用户。详见\ref{nli:cxsfy}节。
+\end{enumerate}
 
-一直以来，自然语言接口是人机交互领域的终极追求，也是人机交互、机器学习领域专家孜孜不倦钻研学习的热门问题。对于本文所指出的业务层面与技术层面之间的矛盾，如果能对最终用户提供一个自然语言接口，使得我们的系统能直接从最终用户的自然语言中理解到用户的查询意图，并结合数据库，直接生成符合查询意图的SQL语句返回给用户，那么这一矛盾就可以非常自然和优美地得到解决。因此，本章将对从自然语言生成SQL语句的技术和模型进行探究，尝试寻找一种解决方案，能提供自然语言接口给非技术用户，让用户通过以自然语言表达的查询意图，得到目标SQL语句。
+% 1）	用户接口：用户与系统进行交互的接口，包括输入自然语言、返回SQL语句、解析过程中的交互等等。
+% 2）	交互式对话器：管理解析过程与用户的交互，在适当的时候与用户进行交互，让用户对解析过程进行指导。
+% 3）	依赖解析树生成：将用户输入的，以自然语言表示的查询意图，应用自然语言理解技术，转化为依赖解析树，即将词语进行词性标注，以及识别出词语之间的关系，并将其组织成一个树状结构。详见3.2节。
+% 4）	解析树节点映射：根据解析树节点对应的词语和数据库元数据、数据、SQL语法等信息，将解析树节点映射为SQL语法组件。在这个过程中，如果节点的映射有多个候选答案，交互式对话器会发起与用户的交互，将多个候选映射展示给用户，让用户来进行选择。详见3.3节。
+% 5）	解析树优化重构：节点映射完毕后，解析树节点经过系统匹配和用户指导后，得到了比较准确的结果，但解析树的结构仍是最初由依赖解析树生成得到的结构，这一原始结构的准确度并不高，受限于自然语言的复杂性和省略性，可能会有错误关系、缺失关系、缺失节点等等。为了使解析树能得到比较准确的结构，将设计算法和规则，修正错误关系，补全缺失节点和缺失关系，得到较为准确的解析树，称为查询树。详见3.4节。
+% 6）	查询树翻译：解析树的结构已经符合SQL语法，节点映射结果也对应于真实的SQL语法、数据库schema或数据，可以很自然地将树状结构的翻译为SQL语句，最后将SQL语句通过用户接口返回给用户。详见3.5节。
 
-自然语言理解存在许多难题，如歧义、语序，或者存在复杂的依赖结构等等，要完全基于自然语言理解来进行SQL生成是很困难的，效果可能会不尽如人意。所以，受到人机交互思想的启发，本文将使用自然语言理解与人机交互相结合的方式，来进行从自然语言到目标SQL语句的转化。对于自然语言意图，先对自然语言进行初步解析和理解，并在其中插入人机交互机制，让用户来引导生成的过程，指导自然语言理解，纠正机器理解过程中出现的错误、歧义、含糊不清的问题，从而提升整体的准确性。
-
-图3-1是本文从自然语言生成SQL语句模型的总体方案，它包含依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译、交互式对话器、用户接口六个模块：
-1）	用户接口：用户与系统进行交互的接口，包括输入自然语言、返回SQL语句、解析过程中的交互等等。
-2）	交互式对话器：管理解析过程与用户的交互，在适当的时候与用户进行交互，让用户对解析过程进行指导。
-3）	依赖解析树生成：将用户输入的，以自然语言表示的查询意图，应用自然语言理解技术，转化为依赖解析树，即将词语进行词性标注，以及识别出词语之间的关系，并将其组织成一个树状结构。详见3.2节。
-4）	解析树节点映射：根据解析树节点对应的词语和数据库元数据、数据、SQL语法等信息，将解析树节点映射为SQL语法组件。在这个过程中，如果节点的映射有多个候选答案，交互式对话器会发起与用户的交互，将多个候选映射展示给用户，让用户来进行选择。详见3.3节。
-5）	解析树优化重构：节点映射完毕后，解析树节点经过系统匹配和用户指导后，得到了比较准确的结果，但解析树的结构仍是最初由依赖解析树生成得到的结构，这一原始结构的准确度并不高，受限于自然语言的复杂性和省略性，可能会有错误关系、缺失关系、缺失节点等等。为了使解析树能得到比较准确的结构，将设计算法和规则，修正错误关系，补全缺失节点和缺失关系，得到较为准确的解析树，称为查询树。详见3.4节。
-6）	查询树翻译：解析树的结构已经符合SQL语法，节点映射结果也对应于真实的SQL语法、数据库schema或数据，可以很自然地将树状结构的翻译为SQL语句，最后将SQL语句通过用户接口返回给用户。详见3.5节。
 接下来，将详细阐述依赖解析树模块、解析树节点映射模块、解析树优化重构模块、查询树翻译器的设计思路和实现细节。
 
-依赖解析树生成
-本模块将用户输入的自然语言查询意图解析为解析树，包含各词语的词性标注、关系提取等等信息。在具体实现过程中，这一模块基于StanfordCoreNLP[8]实现。StanfordCoreNLP是斯坦福大学推出的自然语言处理工具集，支持多种语言，还提供了C++、Python、Java等多种程序语言的编程接口，提供依赖解析、命名实体识别、词性标注、情感分析、机器翻译等多种功能。本模块调用该工具，将自然语言解析为依赖解析树。
+\subsection{依赖解析树生成}
+\label{nli:yljxssc}
 
-解析树节点映射
-本模块将依赖解析树的节点对应的词语，映射到SQL组件上。解析树节点的类型定义如表3-1所示。
+本模块将用户输入的自然语言查询意图解析为解析树，包含各词语的词性标注、关系提取等等信息。
+在具体实现过程中，这一模块基于StanfordCoreNLP[!!!!!!!!!!!此处引用]实现。
+StanfordCoreNLP是斯坦福大学推出的自然语言处理工具集，支持多种语言，还提供了C++、Python、Java等多种程序语言的编程接口，提供依赖解析、命名实体识别、词性标注、情感分析、机器翻译等多种功能。
+本模块调用该工具，将自然语言解析为依赖解析树。
 
-表3-1解析树节点的类型
-节点类型	对应的SQL组件
-选择节点（SN）	SELECT
-操作符节点（ON）	一个操作符，如等于（“=”）、小于（“<”）
-聚合函数节点（FN）	一个聚合函数，如AVG、MAX
-名字节点（NN）	业务数据库中的一个数据表的名字，或数据表的一个字段的名字
-值节点（VN）	业务数据库中某字段的一个值
-度量节点（QN）	ALL，ANY，EACH
-逻辑节点（LN）	AND，OR，NOT
+\subsection{解析树节点映射}
+\label{nli:jxsjdys}
+本模块将依赖解析树的节点对应的词语，映射到SQL组件上。解析树节点的类型定义如表\ref{nli:jxsjddlx}所示。
 
-其中名字节点和值节点是与当前应用的业务数据库有关，其余五种节点都与业务数据库无关，仅与SQL语法规则相关。所以，本系统建立了一个五种与业务数据库无关的节点类型与自然语言单词的词典映射。映射过程的实现如下：
-对每一个解析树节点对应的单词n，分别计算其与业务数据库元数据、存储数据、词典映射中词语v的相似度Sim(n,v)，Sim(n,v)的定义如下：
+% 这一节给出的是一些表格的例子，如表\ref{nli:jxsjddlx}所示。
 
-其中为n和v的WUP相似度[12]，(n,v)为n和v的q-gram的Jaccard相似度的平方根[13]。经公式计算，可以得到节点单词n与所有SQL组件的相似度；对相似度进行排序，可以得到前五相似的SQL组件，如果前五相似的SQL组件的相似度Sim(n,v)的值差别较大，则直接以相似度最高的SQL组件作为当前单词n的映射，并赋予该组件对应的节点类型；若前五相似的SQL组件的相似度差别较小，则视作歧义，将候选的SQL组件返回给用户，让用户来进行选择，最后用户选择的结果会作为当前节点的映射。 
-解析树优化重构
-节点映射完成后，需要对解析树的结构进行重构，保证解析树的结构能有较高的准确性。由于解析树可能会存在关系解析错误和节点关系缺失，所以这一模块对于解析树的优化重构会分为两个步骤进行，分别为结构调整和隐藏节点插入。
-结构调整
-在进行结构调整之前，首先定义什么样的树结构是好的、合法的。我们从两个角度来考虑这个问题：第一点是树结构与经依赖解析器解析后的原始结构的差别有多大；第二点是树结构是否符合SQL的语法，这一点的评估可以根据表3-2的定义来确定[9]。表3-2根据SQL语句的语法，结合了树状结构，定义了能合理的转化为SQL语句的语法树应该满足什么样的规则，这样的语法树我们称之为查询树。在表3-2中，“+”代表父子节点的关系，“*”代表兄弟节点的关系，上标“*”代表可重复出现的兄弟节点，“|”代表“或者关系”，表示当前节点可能存在的情况。
+\begin{table}[!hpb]
+  \centering
+  \bicaption[指向一个表格的表目录索引]
+    {解析树节点的类型}
+    {A Table}
+  \label{nli:jxsjddlx}
+  \begin{tabular}{@{}llr@{}} \toprule
+    % \multicolumn{2}{c}{Item} \\ \cmidrule(r){1-2}
+    节点类型 & 对应的SQL组件\\\midrule
+    选择节点（SN） & SELECT\\
+    操作符节点（ON） & 一个操作符，如等于（“=”）、小于（“<”）\\
+    聚合函数节点（FN） & 一个聚合函数，如AVG、MAX\\
+    名字节点（NN） & 业务数据库中的一个数据表的名字，或数据表的一个字段的名字\\
+    值节点（VN） & 业务数据库中某字段的一个值\\
+    度量节点（QN） & ALL，ANY，EACH\\
+    逻辑节点（LN） & AND，OR，NOT\\\bottomrule
 
-表3-3展示了结构调整的算法，算法的基本思想是，建立一个优先级队列，对于当前的解析树，调用adjust()函数（第8行），通过一次移动子树操作，生成在这一次操作后所有可能的结构；然后记录当前树的哈希值（第12行），防止之后出现重复的树结构；若当前树结构没有出现过（第10行），且edit值小于一个阈值，则对此树进行下一步操作；由于移动了一次子树，返回的树的edit属性加一（第11行），这一属性将用来评估生成的树结构与原始结构的差异；调用evaluate()函数，记录当前结构有多少节点不满足表3-2设定的规则，不满足规则的节点数将用来评估树结构在语法上的合法性；综合这两方面评估标准，为树打分，如果分数比之前的树结构要高，则加入优先级队列；若该树完全符合语法规则，则视为一颗查询树，加入result集合；之后对优先级队列内的树结构重复以上操作，直到优先级队列为空；最后根据评估分数对result集合排序，将结果返回。
+    % Animal & Description & Price (\$)\\ \midrule
+    % Gnat & per gram & 13.65 \\
+    % & each & 0.01 \\
+    % Gnu & stuffed & 92.50 \\
+    % Emu & stuffed & 33.33 \\
+    % Armadillo & frozen & 8.99 \\ \bottomrule
+  \end{tabular}
+\end{table}
+% \footnotetext[1]{这个例子来自\href{http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/booktabs.pdf}{《Publication quality tables in LATEX》}(booktabs宏包的文档)。这也是一个在表格中使用脚注的例子，请留意与threeparttable实现的效果有何不同。}
 
-结构调整之后的解析树结果集，将会通过交互式对话器，与用户进行交互，因为结果集中的解析树虽然都符合SQL语法规则，但仍有可能存在与用户意图不同的情况，如SELECT子句中的名字节点和WHERE子句中的名字节点，位置可能会互换，虽然仍然符合SQL语法规则，但与原始查询意图已经有比较大的差别了。所以，在这里需要再一次应用人机交互机制，让用户来选择结果集中与自己的查询意图比较相似的解析树。交互完成后，筛选出的结果集，会进入下一步——隐藏节点插入。
-隐藏节点插入
-结构调整完成后，对经过排序和用户交互筛选后的结果集合，进行隐藏节点插入。在给出隐藏节点插入的方法之前，先给出需要用到的概念定义，即“核心节点”。核心节点指的是在节点类型为leftSubtree和rightSubtree的情况下（表3-2），leftSubtree（rightSubtree）的所有子节点中，高度最高的名称节点被称为核心节点。
+
+其中名字节点和值节点是与当前应用的业务数据库有关，其余五种节点都与业务数据库无关，仅与SQL语法规则相关。
+所以，本系统建立了一个五种与业务数据库无关的节点类型与自然语言单词的词典映射。映射过程的实现如下：
+对每一个解析树节点对应的单词$n$，分别计算其与业务数据库元数据、存储数据、词典映射中词语v的相似度$Sim_{wup}(n,v)$，$Sim_{gram}(n,v)$的定义如公式\ref{nli:eq1}所示：
+
+%   \begin{equation}
+%     \label{eq:res}
+%     \ointop_{\gamma}f(z)\,\mathrm{d}z = 2\uppi\mathbf{i}\sum^n_{k=1}\mathrm{I}(\gamma,a_k)\mathrm{Res}(f,a_k)
+%   \end{equation}
+  \begin{equation}
+    \label{nli:eq1}
+    % Sim \left ( n ,\right v) = \max\left ( Sim_{wup}\left ( n ,\right v) ,\right Sim_{gram}\left ( n ,\right v))
+    Sim(n,v) = \max(Sim_{wup}(n,v),Sim_{gram}(n,v))
+\end{equation}
+
+其中$Sim_{wup}(n,v)$为$n$和$v$的WUP相似度[！！引用！！]，$Sim_{gram}(n,v)$为$n$和$v$的q-gram的Jaccard相似度的平方根[！！引用！！]。
+经公式计算，可以得到节点单词$n$与所有SQL组件的相似度；
+对相似度进行排序，可以得到前五相似的SQL组件，如果前五相似的SQL组件的相似度$Sim(n,v)$的值差别较大，则直接以相似度最高的SQL组件作为当前单词n的映射，并赋予该组件对应的节点类型；
+若前五相似的SQL组件的相似度差别较小，则视作歧义，将候选的SQL组件返回给用户，让用户来进行选择，最后用户选择的结果会作为当前节点的映射。 
+
+\subsection{解析树优化重构}
+\label{nli:jxsyhcg}
+
+节点映射完成后，需要对解析树的结构进行重构，保证解析树的结构能有较高的准确性。
+由于解析树可能会存在关系解析错误和节点关系缺失，所以这一模块对于解析树的优化重构会分为两个步骤进行，分别为结构调整和隐藏节点插入。
+
+\subsubsection{结构调整}
+
+在进行结构调整之前，首先定义什么样的树结构是好的、合法的。
+我们从两个角度来考虑这个问题：第一点是树结构与经依赖解析器解析后的原始结构的差别有多大；
+第二点是树结构是否符合SQL的语法，这一点的评估可以根据表\ref{nli:hfjxsjggz}的定义来确定[!!yinyong!!]。
+
+\begin{table}[!hpb]
+    \centering
+    \bicaption[指向一个表格的表目录索引]
+      {合法解析树结构规则}
+      {A Table}
+    \label{nli:hfjxsjggz}
+    \begin{tabular}{@{}llr@{}} \toprule
+      % \multicolumn{2}{c}{Item} \\ \cmidrule(r){1-2}
+      1  & 	Q -> ( SClause ) ( ComplexCondition ) *\\
+      2  & 	SClause -> SELECT + GNP\\
+      3  & 	ComplexCondition -> ON + ( leftSubtree * rightSubtree )\\
+      4  & 	leftSubtree -> GNP\\
+      5  & 	rightSubtree -> GNP | VN | MIN | MAX\\
+      6  & 	GNP -> ( FN + GNP ) | NP\\
+      7  & 	NP -> NN + ( NN ) * ( Condition ) *\\
+      8  & 	condition -> VN | ( ON + VN )\\\bottomrule
+    \end{tabular}
+  \end{table}
+
+表\ref{nli:hfjxsjggz}根据SQL语句的语法，结合了树状结构，定义了能合理的转化为SQL语句的语法树应该满足什么样的规则，这样的语法树我们称之为查询树。
+在表\ref{nli:hfjxsjggz}中，“ + ”代表父子节点的关系，“ * ”代表兄弟节点的关系，上标“ * ”代表可重复出现的兄弟节点，“ | ”代表“或者关系”，表示当前节点可能存在的情况。
+% 这是写在算法\ref{algo:sum_100}前面的一段话，在生成的文件里它会出现在算法\ref{algo:sum_100}前面。
+\begin{algorithm}
+    % \begin{algorithm}[H] % 强制定位
+    \caption{解析树结构调整算法}
+    \label{nli:jxsjgtzsf}
+    \begin{algorithmic}[1] %每行显示行号
+    \Ensure 结构调整之后的解析树结果集 % 输出
+    % \State $sum \gets 0$
+    % \For{$i = 0 \to 100$}
+    %     \State $sum \gets sum + i$
+    %   \EndFor
+    \State $results \gets empty\_set()$
+    \State $priorityQueue \gets empty\_priority\_queue()$
+    \State $priorityQueue \gets priorityQueue + parseTree$
+    % priorityQueue.push(parseTree)
+    \State $hash\_table \gets empty\_set()$
+    \State $hash\_table \gets hash\_table +hash(parseTree)$
+    % hash\_table.add(hash(parseTree))
+    \While{$priorityQueue != empty\_priority\_queue()$}
+        \State $tree \gets priorityQueue.pop()$
+        \State $treeList \gets adjust(tree)$
+        \For{$adjustTree in treeList $}
+        \If{$hash(adjustTree) not in hash\_table$ \textbf{and} $adjustTree.edit < t$}
+            \State $adjustTree.edit \gets tree.edit + 1$
+            \State $hash\_table \gets hash\_table + hash(adjustTree)$
+            % hash\_table.add(hash(adjustTree))
+            \If{$evaluate(adjustTree) >= evaluate(tree)$}
+                \State $priorityQueue.add(tree’)$
+            \EndIf
+            \If{adjustTree is valid}
+                \State $results.add(adjustTree)$
+            \EndIf
+        \EndIf
+        \EndFor
+    \EndWhile
+    \State $results \gets rank(results)$
+    \Return$results$
+    \end{algorithmic}
+    \end{algorithm}
+算法\ref{nli:jxsjgtzsf}展示了结构调整的算法，算法的基本思想是，建立一个优先级队列，对于当前的解析树，调用adjust()函数（第8行），通过一次移动子树操作，生成在这一次操作后所有可能的结构；
+然后记录当前树的哈希值（第12行），防止之后出现重复的树结构；
+若当前树结构没有出现过（第10行），且edit值小于一个阈值，则对此树进行下一步操作；
+由于移动了一次子树，返回的树的edit属性加一（第11行），这一属性将用来评估生成的树结构与原始结构的差异；
+调用evaluate()函数，记录当前结构有多少节点不满足表\ref{nli:hfjxsjggz}设定的规则，不满足规则的节点数将用来评估树结构在语法上的合法性；
+综合这两方面评估标准，为树打分，如果分数比之前的树结构要高，则加入优先级队列；
+若该树完全符合语法规则，则视为一颗查询树，加入result集合；
+之后对优先级队列内的树结构重复以上操作，直到优先级队列为空；最后根据评估分数对result集合排序，将结果返回。
+
+结构调整之后的解析树结果集，将会通过交互式对话器，与用户进行交互，因为结果集中的解析树虽然都符合SQL语法规则，但仍有可能存在与用户意图不同的情况，如SELECT子句中的名字节点和WHERE子句中的名字节点，位置可能会互换，虽然仍然符合SQL语法规则，但与原始查询意图已经有比较大的差别了。
+所以，在这里需要再一次应用人机交互机制，让用户来选择结果集中与自己的查询意图比较相似的解析树。交互完成后，筛选出的结果集，会进入下一步——隐藏节点插入。
+
+\subsubsection{隐藏节点插入}
+
+结构调整完成后，对经过排序和用户交互筛选后的结果集合，进行隐藏节点插入。
+在给出隐藏节点插入的方法之前，先给出需要用到的概念定义，即“核心节点”。
+核心节点指的是在节点类型为leftSubtree和rightSubtree的情况下（表\ref{nli:hfjxsjggz}），leftSubtree（rightSubtree）的所有子节点中，高度最高的名称节点被称为核心节点。
+
 经过研究，需要进行隐藏节点插入的情况有以下几种：
-1）	左子树（leftSubtree）与右子树（rightSubtree）的核心节点对应了不同的SQL组件，即认为右子树真正的核心节点在自然语言表达时被省略了[14]；这是十分常见的现象，因为人在进行自然语言表达时，对两个值进行比较时，会很自然的省略掉后者的一部分，如“Ihavemorebooksthanyours”这句话，就将最后的“yourbooks”给省略成了“yours”；
-2）	左右子树的约束条件应该一致，如果不一致，则认为右子树一部分约束条件被省略了，如“returnauthorswhosepaperspublishedin2018morethanJack’s”这句话，过滤条件的左子树有“in2018”这一约束，而右子树在解析之后没有这一约束，事实上右子树的这一约束被隐藏了，需要作为隐藏节点插入进去；
-3）	某些函数会被省略，如聚合函数“COUNT”，在自然语言表达中经常会被省略，如“Ihavemorebooksthanyours”这句话，“thenumberof”就被省略了。在树结构中，如果过滤条件的操作符为“more”、“less”等词语，而左右子树的核心节点对应的是非数字类型的SQL组件，那么就认为“COUNT”被省略了，需要作为隐藏节点插入解析树。
+\begin{enumerate}
+    \item 左子树（leftSubtree）与右子树（rightSubtree）的核心节点对应了不同的SQL组件，即认为右子树真正的核心节点在自然语言表达时被省略了[14]；
+    这是十分常见的现象，因为人在进行自然语言表达时，对两个值进行比较时，会很自然的省略掉后者的一部分，如“Ihavemorebooksthanyours”这句话，就将最后的“yourbooks”给省略成了“yours”；
+    \item 左右子树的约束条件应该一致，如果不一致，则认为右子树一部分约束条件被省略了，如“returnauthorswhosepaperspublishedin2018morethanJack’s”这句话，过滤条件的左子树有“in2018”这一约束，而右子树在解析之后没有这一约束，事实上右子树的这一约束被隐藏了，需要作为隐藏节点插入进去；
+    \item 某些函数会被省略，如聚合函数“COUNT”，在自然语言表达中经常会被省略，如“Ihavemorebooksthanyours”这句话，“thenumberof”就被省略了。在树结构中，如果过滤条件的操作符为“more”、“less”等词语，而左右子树的核心节点对应的是非数字类型的SQL组件，那么就认为“COUNT”被省略了，需要作为隐藏节点插入解析树。
+\end{enumerate}
+% 1）	左子树（leftSubtree）与右子树（rightSubtree）的核心节点对应了不同的SQL组件，即认为右子树真正的核心节点在自然语言表达时被省略了[14]；这是十分常见的现象，因为人在进行自然语言表达时，对两个值进行比较时，会很自然的省略掉后者的一部分，如“Ihavemorebooksthanyours”这句话，就将最后的“yourbooks”给省略成了“yours”；
+% 2）	左右子树的约束条件应该一致，如果不一致，则认为右子树一部分约束条件被省略了，如“returnauthorswhosepaperspublishedin2018morethanJack’s”这句话，过滤条件的左子树有“in2018”这一约束，而右子树在解析之后没有这一约束，事实上右子树的这一约束被隐藏了，需要作为隐藏节点插入进去；
+% 3）	某些函数会被省略，如聚合函数“COUNT”，在自然语言表达中经常会被省略，如“Ihavemorebooksthanyours”这句话，“thenumberof”就被省略了。在树结构中，如果过滤条件的操作符为“more”、“less”等词语，而左右子树的核心节点对应的是非数字类型的SQL组件，那么就认为“COUNT”被省略了，需要作为隐藏节点插入解析树。
+
 进行隐藏节点插入之后，查询树的结构就比较完整了，将会输入下一模块进行翻译。
-查询树翻译
+
+\subsection{查询树翻译}
+\label{nli:cxsfy}
 这一阶段的查询树已经在节点映射、树结构、完整性方面都比较可信、合法了，翻译步骤如下：
-1）	根据树结构，在SClause子树下的结构为SELECT子句，读取SClause下的名称节点，根据对应的SQL组件（如果SQL组件对应某数据表，该数据表会预定义一个核心字段，如用户的名字、城市的名称，该数据表的核心字段将作为结果返回），填充入SELECT子句，并记录SQL组件对应的数据表，以备FROM子句的生成
-2）	在ComplexCondition子树下的结构为WHERE子句，分别读取左子树和右子树核心节点对应的SQL组件，记录下SQL组件对应的数据表，并查看左右子树中所有的节点，根据其节点类型，将其翻译为对应的SQL组件，并应用于核心节点；左右子树解析完后，以操作符连接左右子树，将其填充入WHERE子句
-3）	根据之前记录的相关数据表，生成SQL语句的FROM子句
-4）	将三部分按照语法连接起来，作为合法的SQL语句返回给用户。
+\begin{enumerate}
+    \item 根据表\ref{nli:hfjxsjggz}中的树结构，在SClause子树下的结构为SELECT子句，读取SClause下的名称节点，根据对应的SQL组件（如果SQL组件对应某数据表，该数据表会预定义一个核心字段，如用户的名字、城市的名称，该数据表的核心字段将作为结果返回），填充入SELECT子句，并记录SQL组件对应的数据表，以备FROM子句的生成。
+    \item 在ComplexCondition子树下的结构为WHERE子句，分别读取左子树和右子树核心节点对应的SQL组件，记录下SQL组件对应的数据表，并查看左右子树中所有的节点，根据其节点类型，将其翻译为对应的SQL组件，并应用于核心节点；左右子树解析完后，以操作符连接左右子树，将其填充入WHERE子句。
+    \item 根据之前记录的相关数据表，生成SQL语句的FROM子句。
+    \item 将三部分按照语法连接起来，作为合法的SQL语句返回给用户。
+\end{enumerate}
 
-数据集
+\section{实验与分析}
+
+\subsection{数据集}
 本次实验所使用的业务数据库为MySQL的样例数据库Classicmodels，图3-2为Classicmodels数据库的数据库模式图
+\begin{figure}[!htp]
+    \centering
+    \includegraphics[width=15cm]{example/classicmodel.png}
+    \bicaption[这里将出现在插图索引中]
+      {Classicmodels数据库的数据库模式图}
+      {English caption}
+    \label{fig:NLIclassicmodel}
+  \end{figure}
 
-实验所使用的自然语言查询数据集由作者根据Classicmodels数据库的模式建立，根据查询意图的复杂度，分为简单、中等、困难三类。每种类别，提出了20条自然语言查询，共计60条，用来测试模型的准确性。表3-4给出了三种类别的自然语言查询示例。
+\subsection{实验结果}
 
-结果分析
-1）	经过两次实验，分别检验完整模型和无交互机制模型生成SQL语句的准确性。可以看出，交互机制对于模型的准确性有很大的提升；而加入了交互机制后，模型可以比较准确的处理简单和中等复杂度的查询意图，即便是复杂度较高的查询意图，本文提出的模型仍然可以正确生成一部分困难复杂度的SQL语句。在实验过程中，经常出现节点歧义需要映射，如“price”一词可以映射到“products”表中的“buyPrice”，也有可能映射到“orderdetails”表中的“priceEach”。那么对于测试语句“return order details whose price is higher than 50”，如果没有交互机制，对于“price”这个节点的映射就会优先映射到“products”中的“buyPrice”，而实际上应该映射到“orderdetails”表中的“priceEach”。可以看出，交互机制在节点映射这一部分准确率的提升，大大影响了整体模型的准确率。
-2）	在作者构造的自然语句查询意图数据集中，简单复杂度的查询意图大体上是返回某数据表中某一字段，中等复杂度的查询意图会添加一些聚合函数和简单过滤条件，困难复杂度的意图会增加更多的聚合函数和跨表查询，总体上来说结构都比较简单。在表3-5所示的结果中，困难复杂度意图的错误生成情况，一部分来源于查询意图对应的SQL语句需要子查询，如“return the customer who has the most orders”。目前的模型还不能很好的处理这一种情况，在解析树语法和翻译过程中都还没考虑子查询的情况，这可能是接下来需要进一步进行的工作，即提升模型的处理能力，使其能处理更复杂的查询意图。
-3）	目前模型基于相似度的节点映射机制仍然有不足之处，如“return the mobile number of custormer whose name is Australian Gift Network”这一查询意图，对于顾客名称“Australian Gift Network”，系统会将其映射为三个不同的节点，导致生成出错。尽管模型对于数据库模式中的一些连接词或短语，如“thenumberof”、“customername”，进行了特殊处理，但对于上文所示的这些特殊短语或词语，目前没有较好的方法来进行处理。
-4）	本文自行建立了一个解析树节点类型与自然语言单词的映射词典（3.3节），能处理一些常见的单词与SQL语法的对应关系，如“return”、“in”、“have”、“thenumberof”，但映射关系仍然不足，所以本实验所使用的测试查询意图都需要使用这些比较固定的词语来构建。事实上，自然语言的表达非常多样，如果要增加模型的处理能力，扩充这个映射词典也是非常必要的。
-5）	尽管人机交互机制对于节点映射的准确率有较大提升，但根据观察，立足于目前数据量较小、数据库模式简单的前提下，这一机制能保证映射相似度排名前五的SQL组件包含正确的映射关系；但随着数据库数据量的增加、数据库模式的复杂化，目前节点映射的相似度计算机制，可能无法确保正确的SQL组件能有较高的相似度。
+实验所使用的自然语言查询数据集由作者根据Classicmodels数据库的模式建立，根据查询意图的复杂度，分为简单、中等、困难三类。每种类别，提出了20条自然语言查询，共计60条，用来测试模型的准确性。
+表3-4给出了三种类别的自然语言查询示例。
+
+此处有多个表。
+
+\begin{table}[!hpb]
+    \centering
+    \bicaption[指向一个表格的表目录索引]
+      {t1}
+      {A Table}
+    \label{nli:t1}
+    \begin{tabular}{@{}llr@{}} \toprule
+      % \multicolumn{2}{c}{Item} \\ \cmidrule(r){1-2}
+      1  & 	test\\\bottomrule
+    \end{tabular}
+  \end{table}
+
+\begin{table}[!hpb]
+    \centering
+    \bicaption[指向一个表格的表目录索引]
+      {t2}
+      {A Table}
+    \label{nli:t2}
+    \begin{tabular}{@{}llr@{}} \toprule
+      % \multicolumn{2}{c}{Item} \\ \cmidrule(r){1-2}
+      1  & 	test\\\bottomrule
+    \end{tabular}
+\end{table}
+
+\subsection{实验分析}
+\begin{enumerate}
+    \item   经过两次实验，分别检验完整模型和无交互机制模型生成SQL语句的准确性。可以看出，交互机制对于模型的准确性有很大的提升；而加入了交互机制后，模型可以比较准确的处理简单和中等复杂度的查询意图，即便是复杂度较高的查询意图，本文提出的模型仍然可以正确生成一部分困难复杂度的SQL语句。在实验过程中，经常出现节点歧义需要映射，如“price”一词可以映射到“products”表中的“buyPrice”，也有可能映射到“orderdetails”表中的“priceEach”。那么对于测试语句“return order details whose price is higher than 50”，如果没有交互机制，对于“price”这个节点的映射就会优先映射到“products”中的“buyPrice”，而实际上应该映射到“orderdetails”表中的“priceEach”。可以看出，交互机制在节点映射这一部分准确率的提升，大大影响了整体模型的准确率。
+    \item	在作者构造的自然语句查询意图数据集中，简单复杂度的查询意图大体上是返回某数据表中某一字段，中等复杂度的查询意图会添加一些聚合函数和简单过滤条件，困难复杂度的意图会增加更多的聚合函数和跨表查询，总体上来说结构都比较简单。在表3-5所示的结果中，困难复杂度意图的错误生成情况，一部分来源于查询意图对应的SQL语句需要子查询，如“return the customer who has the most orders”。目前的模型还不能很好的处理这一种情况，在解析树语法和翻译过程中都还没考虑子查询的情况，这可能是接下来需要进一步进行的工作，即提升模型的处理能力，使其能处理更复杂的查询意图。
+    \item	目前模型基于相似度的节点映射机制仍然有不足之处，如“return the mobile number of custormer whose name is Australian Gift Network”这一查询意图，对于顾客名称“Australian Gift Network”，系统会将其映射为三个不同的节点，导致生成出错。尽管模型对于数据库模式中的一些连接词或短语，如“thenumberof”、“customername”，进行了特殊处理，但对于上文所示的这些特殊短语或词语，目前没有较好的方法来进行处理。
+    \item	本文自行建立了一个解析树节点类型与自然语言单词的映射词典（表\ref{nli:jxsjddlx}），能处理一些常见的单词与SQL语法的对应关系，如“return”、“in”、“have”、“thenumberof”，但映射关系仍然不足，所以本实验所使用的测试查询意图都需要使用这些比较固定的词语来构建。事实上，自然语言的表达非常多样，如果要增加模型的处理能力，扩充这个映射词典也是非常必要的。
+    \item	尽管人机交互机制对于节点映射的准确率有较大提升，但根据观察，立足于目前数据量较小、数据库模式简单的前提下，这一机制能保证映射相似度排名前五的SQL组件包含正确的映射关系；但随着数据库数据量的增加、数据库模式的复杂化，目前节点映射的相似度计算机制，可能无法确保正确的SQL组件能有较高的相似度。
+\end{enumerate}
+
+
+\section{本章小结}
+    xxxxxxxxxxxxxxxxxxxxx\\
+    xxxxxxxxxxxxxxxxxxxxx\\
+    xxxxxxxxxxxxxxxxxxxxx
 
 
 
