--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -7,7 +7,7 @@
 %% Encoding: UTF-8
 %%==================================================
 \chapter{总结与展望}
-
+\label{chap:conculution}
 \section{本文工作小结}
 \section{展望}
 
